// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection Details test Renders connection details for prometheus datasource 1`] = `
Array [
  <div
    className="euiSpacer euiSpacer--l"
  />,
  <div
    className="euiCallOut euiCallOut--primary"
  >
    <div
      className="euiCallOutHeader"
    >
      <svg
        aria-hidden={true}
        className="euiIcon euiIcon--medium euiIcon--inherit euiCallOutHeader__icon"
        focusable="false"
        height={16}
        role="img"
        style={null}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 11.508 7.468 8H6.25V7h2.401l.03 3.508H9.8v1H7.5Zm-.25-6.202a.83.83 0 0 1 .207-.577c.137-.153.334-.229.59-.229.256 0 .454.076.594.23.14.152.209.345.209.576 0 .228-.07.417-.21.568-.14.15-.337.226-.593.226-.256 0-.453-.075-.59-.226a.81.81 0 0 1-.207-.568ZM8 13A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm0 1A6 6 0 1 1 8 2a6 6 0 0 1 0 12Z"
          fillRule="evenodd"
        />
      </svg>
      <span
        className="euiCallOutHeader__title"
      >
        Configurations may be managed elsewhere.
      </span>
    </div>
    <div
      className="euiText euiText--small"
    >
      <div
        className="euiTextColor euiTextColor--default"
      >
        Access to data may be managed in other systems outside of OpenSearch. Check with your administrator for additional configurations.
      </div>
    </div>
  </div>,
  <div
    className="euiSpacer euiSpacer--l"
  />,
  <div
    className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiText euiText--medium"
        >
          <h2
            className="panel-title"
          >
            Data source configurations
          </h2>
          Control configurations for your data source.
        </div>
      </div>
    </div>
    <hr
      className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
    />
    <div
      className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              className="euiText euiText--medium overview-title"
            >
              Data source name
            </div>
            <div
              className="euiText euiText--small overview-content"
            >
              prom
            </div>
          </div>
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              className="euiText euiText--medium overview-title"
            >
              Data source description
            </div>
            <div
              className="euiText euiText--small overview-content"
            >
              -
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              className="euiText euiText--medium overview-title"
            >
              Prometheus URI
            </div>
            <div
              className="euiText euiText--small overview-content"
            >
              localhost:9201
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiSpacer euiSpacer--l"
  />,
  <div
    className="euiSpacer euiSpacer--l"
  />,
]
`;

exports[`Connection Details test Renders connection details for s3 datasource 1`] = `
Array [
  <div
    className="euiSpacer euiSpacer--l"
  />,
  <div
    className="euiCallOut euiCallOut--primary"
  >
    <div
      className="euiCallOutHeader"
    >
      <svg
        aria-hidden={true}
        className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiCallOutHeader__icon"
        focusable="false"
        height={16}
        role="img"
        style={null}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        className="euiCallOutHeader__title"
      >
        Configurations may be managed elsewhere.
      </span>
    </div>
    <div
      className="euiText euiText--small"
    >
      <div
        className="euiTextColor euiTextColor--default"
      >
        Access to data may be managed in other systems outside of OpenSearch. Check with your administrator for additional configurations.
      </div>
    </div>
  </div>,
  <div
    className="euiSpacer euiSpacer--l"
  />,
  <div
    className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiText euiText--medium"
        >
          <h2
            className="panel-title"
          >
            Data source configurations
          </h2>
          Control configurations for your data source.
        </div>
      </div>
    </div>
    <hr
      className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
    />
    <div
      className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              className="euiText euiText--medium overview-title"
            >
              Data source name
            </div>
            <div
              className="euiText euiText--small overview-content"
            >
              ya
            </div>
          </div>
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              className="euiText euiText--medium overview-title"
            >
              Data source description
            </div>
            <div
              className="euiText euiText--small overview-content"
            >
              -
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              className="euiText euiText--medium overview-title"
            >
              Index store region
            </div>
            <div
              className="euiText euiText--small overview-content"
            >
              us-west-2
            </div>
          </div>
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              className="euiText euiText--medium overview-title"
            >
              Index store URI
            </div>
            <div
              className="euiText euiText--small overview-content"
            >
              y
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiSpacer euiSpacer--l"
  />,
  <div
    className="euiSpacer euiSpacer--l"
  />,
]
`;
